force-app/main/default/objects/Copado_Access_Request__c/Copado_Access_Request__c.object-meta.xml
<CustomObject>
    <label>Copado_Access_Request</label>
    <nameField>
        <displayFormat>CAR-{0000}</displayFormat>
        <label>Copado_Access_Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Copado_Access_Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>