force-app/main/default/objects/Copado_Access_Request__c/fields/Copado_Role__c.field-meta.xml
<CustomField>
    <fullName>Copado_Role__c</fullName>
    <label>Copado_Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>