force-app/main/default/objects/Copado_Access_Request__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <label>Employee_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>