force-app/main/default/objects/Copado_Access_Request__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <label>Full_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>