force-app/main/default/objects/Copado_Access_Request__c/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <label>Manager_Email</label>
    <type>Email</type>
</CustomField>