force-app/main/default/objects/Copado_Access_Request__c/fields/Salesforce_UserName__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_UserName__c</fullName>
    <label>Salesforce UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>